...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XmR-cZ-3lu">
                                <rect key="frame" x="155.5" y="460" width="103" height="30"/>
                                <state key="normal" title="Go to overview"/>
                                <connections>
                                    <segue destination="yWk-fi-x9k" kind="show" id="2fl-aY-NiP"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                    <view key="view" contentMode="scaleToFill" id="YQW-Ze-eRY">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxS-xA-Zxc">
                                <rect key="frame" x="156.5" y="460" width="101" height="30"/>
                                <state key="normal" title="Go to Me Page"/>
                                <connections>
                                    <segue destination="xXt-WE-EAS" kind="show" id="KfH-W2-Wwa"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                    <view key="view" contentMode="scaleToFill" id="UDc-3c-dQA">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYG-ZO-6JE">
                                <rect key="frame" x="144" y="460" width="126" height="30"/>
                                <state key="normal" title="Open DF welcome"/>
                                <connections>
                                    <segue destination="nJH-Iv-LOu" kind="show" id="dru-ny-GJF"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                    <view key="view" contentMode="scaleToFill" id="pVJ-R3-bCj">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0M-h0-t9p">
                                <rect key="frame" x="173" y="460" width="68" height="30"/>
                                <state key="normal" title="Add Email"/>
                                <connections>
                                    <segue destination="ylz-Do-JDm" kind="presentation" id="cwx-eE-VLB"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Digital Footprint" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xfa-Ka-HHn">
                                <rect key="frame" x="20" y="163" width="374" height="23"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y7C-Mb-GtS">
                                <rect key="frame" x="173" y="523" width="68" height="30"/>
                                <state key="normal" title="ListView"/>
                                <connections>
                                    <segue destination="tYj-xj-BCI" kind="show" id="NPV-24-wxm"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
